@@ -1,0 +1,14 @@
+namespace Qyoto {
+
+	using System;
+
+	public class QDBusVariant : QVariant {
+
+		public QDBusVariant() : base() { }
+		public QDBusVariant(QVariant variant) : base(variant) { }
+
+		public void SetVariant(QVariant variant) {}
+
+		QVariant Variant() { return this; }
+	}
+}
