@@ -1,4 +1,10 @@
-2007-28-01  Richard Dale  <rdale@foton.es>
+2007-30-01  Richard Dale  <rdale@foton.es>
+
+	* Fixed regressions caused by adding signal return values
+	* Added a QDBusVariant class and marshalling for it
+	* The complexpong example still doesn't return a QDBusVariant value
+
+2007-29-01  Richard Dale  <rdale@foton.es>
 
 	* Added reply values when emitting signals
 	* Some static methods were being dropped because they had the same
